nak-935 Created APIs for EB
